# NyaGallery

./: .gitignore  README.md  READMORE.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: README_CN.md  READMORE_CN.md  USAGE_CN.md
frontend/: README.md
frontend/src/app/admin/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/admin/: admin-accounts-panel.tsx  admin-developer-panel.tsx  admin-maintenance-panel.tsx  admin-pixiv-panel.tsx  admin-security-panel.tsx
frontend/src/components/layout/: app-shell.tsx
frontend/src/components/providers/: content-preferences-provider.tsx
frontend/src/hooks/admin/: use-admin-developer.ts  use-admin-pixiv-settings.ts
frontend/src/hooks/upload/: use-upload-queue.ts
frontend/src/lang/: en-US.json  zh-CN.json
frontend/src/lib/: admin-sections.ts  api.ts  types.ts
src/nyagallery/: app.py  auth.py  cli.py  config.py  db.py  pixiv.py  secret_crypto.py  security.py  storage.py
