[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyagallery"
version = "0.1.0"
description = "Self-hosted anime illustration gallery core."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NyaGallery contributors" }]
dependencies = [
    "cryptography>=42",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "SQLAlchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
media = ["Pillow>=10", "pillow-avif-plugin>=1.4"]
pixiv = ["pixivpy3>=3.7"]
pixiv-login = ["gppt>=4.3"]
postgres = ["psycopg[binary]>=3.2"]
redis = ["redis>=5.0"]
dev = ["pytest>=8"]

[project.scripts]
nyagallery = "nyagallery.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
